Add notes about Java modules in SIS 1.4 and later.